objects/PMC_CPQ_ApprovalQuoteLine__c.object
<CustomObject>
    <fields>
        <fullName>PMC_CPQ_ApprovalRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Rule</label>
        <referenceTo>sbaa__ApprovalRule__c</referenceTo>
        <relationshipLabel>Approval QuoteLines</relationshipLabel>
        <relationshipName>Approval_QuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval</label>
        <referenceTo>sbaa__Approval__c</referenceTo>
        <relationshipLabel>Approval QuoteLines</relationshipLabel>
        <relationshipName>Approval_QuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Approval QuoteLines</relationshipLabel>
        <relationshipName>ApprovalQuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Approval QuoteLines</relationshipLabel>
        <relationshipName>Approval_QuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Approval QuoteLine</label>
    <nameField>
        <displayFormat>AQL-{00000}</displayFormat>
        <label>Approval Quote Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval QuoteLines</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>